<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signupVM" type="com.tour_guide.app.modules.signup.data.viewmodel.SignupVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearSignup"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <TextView android:ellipsize="end" android:id="@+id/txtSignup"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signupVM.signupModel.txtSignup}"
            style="@style/txtDMSansbold30" tools:text="@string/lbl_sign_up"/>
        <TextView android:id="@+id/txtWelcomePlease"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:text="@{signupVM.signupModel.txtWelcomePlease}"
            style="@style/txtDMSansregular14" tools:text="@string/msg_welcome_please"/>
        <EditText
            android:background="@drawable/rectangle_border_indigo_50_radius_33"
            android:ellipsize="end" android:hint="@string/lbl_full_name"
            android:id="@+id/etFrameSix" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_26pxh"
            android:paddingTop="@dimen/_24pxv" android:singleLine="true"
            android:text="@={signupVM.signupModel.etFrameSixValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_indigo_50_radius_33"
            android:ellipsize="end"
            android:hint="@string/lbl_email_address"
            android:id="@+id/etFrameThree"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_26pxh"
            android:paddingTop="@dimen/_24pxv" android:singleLine="true"
            android:text="@={signupVM.signupModel.etFrameThreeValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_indigo_50_radius_33"
            android:ellipsize="end"
            android:hint="@string/lbl_your_password"
            android:id="@+id/etFrameFive"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_26pxh"
            android:paddingTop="@dimen/_24pxv" android:singleLine="true"
            android:text="@={signupVM.signupModel.etFrameFiveValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_indigo_50_radius_33"
            android:ellipsize="end"
            android:hint="@string/msg_re_enter_passwo"
            android:id="@+id/etFrameEight"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_26pxh"
            android:paddingTop="@dimen/_24pxv" android:singleLine="true"
            android:text="@={signupVM.signupModel.etFrameEightValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignUpOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_23pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_23pxv" android:singleLine="true"
            android:text="@string/lbl_sign_up"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_162pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{signupVM.signupModel.txtConfirmation}"
            style="@style/txtDMSansregular14" tools:text="@string/msg_already_have_an"/>
    </LinearLayout>
</layout>
