<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signupTypingVM" type="com.tour_guide.app.modules.signuptyping.data.viewmodel.SignupTypingVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearSignupTyping"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <TextView android:ellipsize="end" android:id="@+id/txtSignup"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signupTypingVM.signupTypingModel.txtSignup}"
            style="@style/txtDMSansbold30" tools:text="@string/lbl_sign_up"/>
        <TextView android:id="@+id/txtWelcomePlease"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:text="@{signupTypingVM.signupTypingModel.txtWelcomePlease}"
            style="@style/txtDMSansregular14" tools:text="@string/msg_welcome_please"/>
        <EditText
            android:background="@drawable/rectangle_border_indigo_50_radius_33"
            android:ellipsize="end" android:hint="@string/lbl_full_name"
            android:id="@+id/etFrameSix" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_26pxh"
            android:paddingTop="@dimen/_24pxv" android:singleLine="true"
            android:text="@={signupTypingVM.signupTypingModel.etFrameSixValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <FrameLayout android:id="@+id/frameStackframeseven"
            android:layout_height="@dimen/_50pxv"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="@dimen/_142pxh" style="@style/groupStylecornerRadius_1">
            <HorizontalScrollView android:fillViewport="true"
                android:id="@+id/horizontalScrollHorizontalscrollcreatefromfra"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent" android:scrollbars="none">
                <FrameLayout android:id="@+id/frameStackcreatefromfra"
                    android:layout_height="@dimen/_42pxv" android:layout_width="@dimen/_142pxh">
                    <View
                        android:background="@drawable/rectangle_border_indigo_50_radius_33"
                        android:id="@+id/viewCreatefromfra"
                        android:layout_gravity="bottom|end"
                        android:layout_height="@dimen/_64pxv" android:layout_width="@dimen/_346pxh"/>
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtAlexandrogmail"
                        android:layout_gravity="bottom|start"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{signupTypingVM.signupTypingModel.txtAlexandrogmail}"
                        style="@style/txtDMSansmedium15_1" tools:text="@string/msg_alexandro_gmail"/>
                </FrameLayout>
            </HorizontalScrollView>
            <TextView android:ellipsize="end" android:gravity="center"
                android:id="@+id/txtFrameSeven"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_2pxv"
                android:paddingEnd="@dimen/_4pxh"
                android:paddingStart="@dimen/_4pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@{signupTypingVM.signupTypingModel.txtFrameSeven}"
                style="@style/txtSolid" tools:text="@string/lbl_email_address"/>
        </FrameLayout>
        <EditText
            android:background="@drawable/rectangle_border_indigo_50_radius_33"
            android:ellipsize="end"
            android:hint="@string/lbl_your_password"
            android:id="@+id/etFrameFive"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_42pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_26pxh"
            android:paddingTop="@dimen/_24pxv" android:singleLine="true"
            android:text="@={signupTypingVM.signupTypingModel.etFrameFiveValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_indigo_50_radius_33"
            android:ellipsize="end"
            android:hint="@string/msg_re_enter_passwo"
            android:id="@+id/etFrameEight"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_26pxh"
            android:paddingTop="@dimen/_24pxv" android:singleLine="true"
            android:text="@={signupTypingVM.signupTypingModel.etFrameEightValue}"
            android:textColorHint="@color/bluegray_400"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignUpOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_23pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_23pxv" android:singleLine="true"
            android:text="@string/lbl_sign_up"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_162pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{signupTypingVM.signupTypingModel.txtConfirmation}"
            style="@style/txtDMSansregular14" tools:text="@string/msg_already_have_an"/>
    </LinearLayout>
</layout>
